force-app/main/default/objects/Opportunity/fields/All_Vendors_Agreement_Completed__c.field-meta.xml
<CustomField>
    <fullName>All_Vendors_Agreement_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Vendors Agreement Completed</label>
    <type>Checkbox</type>
</CustomField>