force-app/main/default/objects/Opportunity/fields/Appointment_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Confirmed</label>
    <type>Checkbox</type>
</CustomField>