force-app/main/default/objects/Opportunity/fields/Appointment_Rescheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Rescheduled_Date__c</fullName>
    <label>Appointment Rescheduled Date</label>
    <type>Date</type>
</CustomField>