force-app/main/default/objects/Opportunity/fields/Client_Agreement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Client_Agreement_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Agreement Sent</label>
    <type>Checkbox</type>
</CustomField>