force-app/main/default/objects/Opportunity/fields/Client_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Client_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>