force-app/main/default/objects/Opportunity/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Lead Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>