force-app/main/default/objects/Opportunity/fields/Interior_Category__c.field-meta.xml
<CustomField>
    <fullName>Interior_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interior Category</label>
    <referenceTo>Interior_Category__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>