force-app/main/default/objects/Opportunity/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <description>Name of the Lead</description>
    <inlineHelpText>Name of the Lead</inlineHelpText>
    <label>Lead Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>