force-app/main/default/objects/Opportunity/fields/Negotiation_Review_Budget__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Review_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter the updated Supervisor Estimate Budget agreed upon after a vendor change. Use this field when the original vendor has left mid-project and a replacement vendor has been onboarded, resulting in a revised budget.</inlineHelpText>
    <label>Negotiation/Review Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>