force-app/main/default/objects/Opportunity/fields/Open_Catalogue_Link__c.field-meta.xml
<CustomField>
    <fullName>Open_Catalogue_Link__c</fullName>
    <formula>HYPERLINK(
  IF(
    RIGHT($Label.Arelia_Site_Label,1) = &apos;/&apos;,
    $Label.Arelia_Site_Label &amp; $Label.Inventory_Catalogue_Site_Base &amp; &apos;?c__opportunityId=&apos; &amp; Id,
    $Label.Arelia_Site_Label &amp; &apos;/&apos; &amp; $Label.Inventory_Catalogue_Site_Base &amp; &apos;?c__opportunityId=&apos; &amp; Id
  ),
  &apos;Open Catalogue&apos;,
  &apos;_blank&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Catalogue Link</label>
    <type>Text</type>
</CustomField>