force-app/main/default/objects/Opportunity/fields/Plan_Level__c.field-meta.xml
<CustomField>
    <fullName>Plan_Level__c</fullName>
    <label>Plan Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>