force-app/main/default/objects/Opportunity/fields/Project_Request_Quotation_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Request_Quotation_Type__c</fullName>
    <label>Project Request Quotation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Quotation</fullName>
            </value>
            <value>
                <fullName>Automatic Quotation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>