force-app/main/default/objects/Opportunity/fields/Re_Visit_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Visit_Appointment_Date__c</fullName>
    <label>Re Visit Appointment Date</label>
    <type>Date</type>
</CustomField>