force-app/main/default/objects/Opportunity/fields/Re_Visit_Appointmnet_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Re_Visit_Appointmnet_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re Visit Appointmnet Confirmation</label>
    <type>Checkbox</type>
</CustomField>