force-app/main/default/objects/Opportunity/fields/Re_Visit_Site_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Re_Visit_Site_Appointment_Status__c</fullName>
    <label>Re Visit Site Appointment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>