force-app/main/default/objects/Opportunity/fields/Re_Visit_Site_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Re_Visit_Site_Appointment_Type__c</fullName>
    <label>Re Visit Site Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Re-Design</fullName>
            </value>
            <value>
                <fullName>Re-Budget</fullName>
            </value>
            <value>
                <fullName>Re Visit Follow up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>