force-app/main/default/objects/Opportunity/fields/Re_Visit_Site_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Re_Visit_Site_Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re Visit Site Manager Approval</label>
    <type>Checkbox</type>
</CustomField>