force-app/main/default/objects/Opportunity/fields/Re_Visit_Site_Supervisor_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Visit_Site_Supervisor_Completion_Date__c</fullName>
    <label>Re Visit Site Supervisor Completion Date</label>
    <type>Date</type>
</CustomField>