force-app/main/default/objects/Opportunity/fields/Re_Visit_Site_Supervisor_Estimate_Budget__c.field-meta.xml
<CustomField>
    <fullName>Re_Visit_Site_Supervisor_Estimate_Budget__c</fullName>
    <label>Re Visit Site Supervisor Estimate Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>