force-app/main/default/objects/Opportunity/fields/Rescheduled_Time_Slots__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_Time_Slots__c</fullName>
    <label>Rescheduled Time Slots</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9AM-10AM</fullName>
            </value>
            <value>
                <fullName>10AM-11AM</fullName>
            </value>
            <value>
                <fullName>11AM-12PM</fullName>
            </value>
            <value>
                <fullName>12PM-1PM</fullName>
            </value>
            <value>
                <fullName>1PM-2PM</fullName>
            </value>
            <value>
                <fullName>2PM-3PM</fullName>
            </value>
            <value>
                <fullName>3PM-4PM</fullName>
            </value>
            <value>
                <fullName>4PM-5PM</fullName>
            </value>
            <value>
                <fullName>5PM-6PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>