force-app/main/default/objects/Opportunity/fields/Site_Space__c.field-meta.xml
<CustomField>
    <fullName>Site_Space__c</fullName>
    <label>Site Space</label>
    <length>255</length>
    <type>Text</type>
</CustomField>