force-app/main/default/objects/Opportunity/fields/Site_Visit_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Visit Manager Approval</label>
    <type>Checkbox</type>
</CustomField>