force-app/main/default/objects/Opportunity/fields/Supervisor_Estimated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Estimated_Budget__c</fullName>
    <label>Supervisor Estimated Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>