force-app/main/default/objects/Opportunity/fields/Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name__c</fullName>
    <description>Name of the supervisor</description>
    <inlineHelpText>Name of the supervisor</inlineHelpText>
    <label>Supervisor Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>