force-app/main/default/objects/Opportunity/fields/Supervisor_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_User_Email__c</fullName>
    <formula>Supervisor_User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor User Email</label>
    <type>Text</type>
</CustomField>