force-app/main/default/objects/Opportunity/fields/Supervisor_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_User_Phone__c</fullName>
    <formula>Supervisor_User__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor User Phone</label>
    <type>Text</type>
</CustomField>