force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Supervisor_User__c</columns>
    <columns>Type_of_Project__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Lead_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Project__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Opportunities</label>
</ListView>